// ============================================
// Tribe Application Database Schema
// ============================================
// This file can be copied and pasted into dbdiagram.io
// ============================================

// ============================================
// ENUMS
// ============================================

Enum privacy_type {
  private
  public
}

Enum tribe_role {
  admin
  moderator
  member
}

Enum tribe_category {
  social
  gaming
  family
  work
  hobbies
  other
}

Enum activity_type {
  post
  photo
  event
  member
  comment
  like
}

Enum media_type {
  image
  video
  document
}

Enum invitation_status {
  pending
  accepted
  rejected
  expired
}

Enum event_status {
  upcoming
  ongoing
  completed
  cancelled
}

// ============================================
// AUTHENTICATION TABLES (Better Auth)
// ============================================

Table user {
  id text [primary key]
  name text [not null]
  email text [not null, unique]
  email_verified boolean [not null, default: false]
  image text
  username text [unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'User accounts for authentication'
}

Table session {
  id text [primary key]
  expires_at timestamp [not null]
  token text [not null, unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  ip_address text
  user_agent text
  user_id text [not null, ref: > user.id]
  
  Note: 'User sessions for authentication'
}

Table account {
  id text [primary key]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null, ref: > user.id]
  access_token text
  refresh_token text
  id_token text
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope text
  password text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'OAuth and email/password accounts'
}

Table verification {
  id text [primary key]
  identifier text [not null]
  value text [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'OTP and verification tokens'
}

// ============================================
// TRIBE TABLES
// ============================================

Table tribe {
  id text [primary key]
  name text [not null]
  description text
  avatar text
  location text
  privacy privacy_type [not null, default: 'private']
  category tribe_category [not null, default: 'other']
  is_featured boolean [not null, default: false]
  is_trending boolean [not null, default: false]
  created_by text [not null, ref: > user.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Tribes/communities'
}

Table tribe_member {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  user_id text [not null, ref: > user.id]
  role tribe_role [not null, default: 'member']
  joined_at timestamp [not null, default: `now()`]
  
  Note: 'Many-to-many relationship between users and tribes'
}

Table tribe_invitation {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  invited_by text [not null, ref: > user.id]
  email text [not null]
  role tribe_role [not null, default: 'member']
  status invitation_status [not null, default: 'pending']
  expires_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Tribe invitations'
}

// ============================================
// POST TABLES
// ============================================

Table post {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  author_id text [not null, ref: > user.id]
  content text [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Posts within tribes'
}

Table post_like {
  id text [primary key]
  post_id text [not null, ref: > post.id]
  user_id text [not null, ref: > user.id]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Post likes'
}

Table comment {
  id text [primary key]
  post_id text [not null, ref: > post.id]
  author_id text [not null, ref: > user.id]
  content text [not null]
  parent_comment_id text [ref: > comment.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Comments on posts with nested reply support'
}

Table comment_like {
  id text [primary key]
  comment_id text [not null, ref: > comment.id]
  user_id text [not null, ref: > user.id]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Comment likes'
}

// ============================================
// MEDIA TABLES
// ============================================

Table album {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  created_by text [not null, ref: > user.id]
  name text [not null]
  description text
  cover_image_url text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Photo albums'
}

Table media {
  id text [primary key]
  post_id text [ref: > post.id]
  album_id text [ref: > album.id]
  uploaded_by text [not null, ref: > user.id]
  tribe_id text [not null, ref: > tribe.id]
  file_url text [not null]
  file_type media_type [not null]
  file_size bigint
  mime_type text
  width integer
  height integer
  duration integer
  thumbnail_url text
  alt_text text
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Media files (photos, videos, documents)'
}

// ============================================
// EVENT TABLES
// ============================================

Table event {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  created_by text [not null, ref: > user.id]
  title text [not null]
  description text
  location text
  start_date timestamp [not null]
  end_date timestamp
  status event_status [not null, default: 'upcoming']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Events within tribes'
}

Table event_attendee {
  id text [primary key]
  event_id text [not null, ref: > event.id]
  user_id text [not null, ref: > user.id]
  status text [not null, default: 'going']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Event attendees/RSVPs'
}

// ============================================
// ACTIVITY & NOTIFICATION TABLES
// ============================================

Table activity {
  id text [primary key]
  type activity_type [not null]
  user_id text [not null, ref: > user.id]
  tribe_id text [ref: > tribe.id]
  post_id text [ref: > post.id]
  event_id text [ref: > event.id]
  media_id text [ref: > media.id]
  target_user_id text [ref: > user.id]
  action text [not null]
  preview text
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Activity feed entries'
}

Table notification {
  id text [primary key]
  user_id text [not null, ref: > user.id]
  type text [not null]
  title text [not null]
  message text [not null]
  link text
  is_read boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'User notifications'
}

// ============================================
// HASHTAG & TRENDING TABLES
// ============================================

Table hashtag {
  id text [primary key]
  tag text [not null, unique]
  post_count integer [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  Note: 'Hashtags for posts'
}

Table post_hashtag {
  id text [primary key]
  post_id text [not null, ref: > post.id]
  hashtag_id text [not null, ref: > hashtag.id]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Many-to-many relationship between posts and hashtags'
}

// ============================================
// MESSAGING TABLES
// ============================================

Table message {
  id text [primary key]
  tribe_id text [not null, ref: > tribe.id]
  sender_id text [not null, ref: > user.id]
  content text [not null]
  created_at timestamp [not null, default: `now()`]
  
  Note: 'Messages within tribes'
}

Table message_read {
  id text [primary key]
  message_id text [not null, ref: > message.id]
  user_id text [not null, ref: > user.id]
  read_at timestamp [not null, default: `now()`]
  
  Note: 'Message read tracking'
}

// ============================================
// RELATIONSHIPS
// ============================================

Ref: session.user_id > user.id [delete: cascade]
Ref: account.user_id > user.id [delete: cascade]
Ref: tribe.created_by > user.id [delete: restrict]
Ref: tribe_member.tribe_id > tribe.id [delete: cascade]
Ref: tribe_member.user_id > user.id [delete: cascade]
Ref: tribe_invitation.tribe_id > tribe.id [delete: cascade]
Ref: tribe_invitation.invited_by > user.id [delete: restrict]
Ref: post.tribe_id > tribe.id [delete: cascade]
Ref: post.author_id > user.id [delete: cascade]
Ref: post_like.post_id > post.id [delete: cascade]
Ref: post_like.user_id > user.id [delete: cascade]
Ref: comment.post_id > post.id [delete: cascade]
Ref: comment.author_id > user.id [delete: cascade]
Ref: comment.parent_comment_id > comment.id [delete: cascade]
Ref: comment_like.comment_id > comment.id [delete: cascade]
Ref: comment_like.user_id > user.id [delete: cascade]
Ref: album.tribe_id > tribe.id [delete: cascade]
Ref: album.created_by > user.id [delete: cascade]
Ref: media.post_id > post.id [delete: cascade]
Ref: media.album_id > album.id [delete: set null]
Ref: media.uploaded_by > user.id [delete: cascade]
Ref: media.tribe_id > tribe.id [delete: cascade]
Ref: event.tribe_id > tribe.id [delete: cascade]
Ref: event.created_by > user.id [delete: cascade]
Ref: event_attendee.event_id > event.id [delete: cascade]
Ref: event_attendee.user_id > user.id [delete: cascade]
Ref: activity.user_id > user.id [delete: cascade]
Ref: activity.tribe_id > tribe.id [delete: cascade]
Ref: activity.post_id > post.id [delete: cascade]
Ref: activity.event_id > event.id [delete: cascade]
Ref: activity.media_id > media.id [delete: cascade]
Ref: activity.target_user_id > user.id [delete: cascade]
Ref: notification.user_id > user.id [delete: cascade]
Ref: post_hashtag.post_id > post.id [delete: cascade]
Ref: post_hashtag.hashtag_id > hashtag.id [delete: cascade]
Ref: message.tribe_id > tribe.id [delete: cascade]
Ref: message.sender_id > user.id [delete: cascade]
Ref: message_read.message_id > message.id [delete: cascade]
Ref: message_read.user_id > user.id [delete: cascade]

